--- a/Aspheric/Aspheric.csproj
+++ b/Aspheric/Aspheric.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Aspheric.Generator\Aspheric.Generator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
+      <ProjectReference Include="..\ENet\ENet.csproj" />
     </ItemGroup>
 
     <ItemGroup>
