--- a/Aspheric/Aspheric.csproj
+++ b/Aspheric/Aspheric.csproj
@@ -4,12 +4,13 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>latest</LangVersion>
         <RootNamespace>Erinn</RootNamespace>
+        <PackageId>Aspheric</PackageId>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Aspheric.Generator\Aspheric.Generator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
       <ProjectReference Include="..\ENet\ENet.csproj" />
     </ItemGroup>
 
