--- a/Aspheric.Roslyn/Aspheric.Roslyn.csproj
+++ b/Aspheric.Roslyn/Aspheric.Roslyn.csproj
@@ -8,7 +8,7 @@
         <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
         <IsRoslynComponent>true</IsRoslynComponent>
         <RootNamespace>Erinn</RootNamespace>
-        <PackageId>Aspheric.Generator</PackageId>
+        <PackageId>Aspheric.Roslyn</PackageId>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
